showing selected node index in message

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <a-entity position="-1 0.5 -5" id="scene">
     </a-entity>
+    <a-entity id="txtLabel" text="value: Selected Molecule:{0}; color:black" position="0 0 -1"></a-entity>
 
     <a-sky color="#ECECEC"></a-sky>
   </a-scene>
