--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Hello, WebVR! • A-Frame">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/107/three.js"></script>
   <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+  <script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
 </head>
 
 <body>
@@ -16,15 +17,17 @@
 
   <a-scene environment physics="debug: true;">
     <a-entity camera look-controls>
-      <a-entity cursor="fuse: false" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+      <a-entity cursor="fuse: true;" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
         material="color: black; shader: flat">
+        <a-text id="cylinderText" position=" 0 .65 -3" value="This is a cylinder" align="center" color="white"
+          visible="false" geometry="primitive: plane; width: 1; height:0.5" material="color:black"></a-text>
       </a-entity>
+
     </a-entity>
 
     <a-entity position="-1 0.5 -5" id="scene">
     </a-entity>
     <a-entity id="txtLabel" text="value: Selected Molecule:{0}; color:black" position="0 0 -1"></a-entity>
-
     <a-sky color="#ECECEC"></a-sky>
   </a-scene>
 </body>
