--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/107/three.js"></script>
   <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
-  <script src=""
-    href="https://cdn.rawgit.com/matthewbryancurtis/aframe-star-system-component/db4f1030/index.js></script>"
-    rel="noreferrer noopener" target="_blank"
-    title="https://cdn.rawgit.com/matthewbryancurtis/aframe-star-system-component/db4f1030/index.js>">https://cdn.rawgit.com/matthewbryancurtis/aframe-star-system-component/db4f1030/index.js></script>
-
+  <script src="https://cdn.rawgit.com/matthewbryancurtis/aframe-star-system-component/db4f1030/index.js"></script>
 </head>
 
 <body>
@@ -34,8 +30,9 @@
     </a-entity>
     <!--     <a-entity id="txtLabel" text="value: Selected Molecule:{0}; color:black" position="0 0 -1"></a-entity> -->
     <!--     <a-sky color="#ECECEC"></a-sky> -->
-    <a-sky color="#00001f"></a-sky>
     <a-entity star-system></a-entity>
+
+    <a-sky color="#00001f"></a-sky>
 
   </a-scene>
 </body>
