showing atom text on sphere

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
   <a-scene environment physics="debug: true;">
     <a-entity camera look-controls>
-      <a-entity cursor="fuse: true;" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
-        material="color: black; shader: flat">
+      <a-entity cursor="fuse: true;" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.02"
+        material="color: white; shader: flat">
         <a-text id="cylinderText" position=" 0 .65 -3" value="This is a cylinder" align="center" color="black"
           visible="false" geometry="primitive: plane; width: 1; height:0.5" material="color:white"></a-text>
       </a-entity>
