almost ready for demo

--- a/index.html
+++ b/index.html
@@ -19,17 +19,31 @@
   <a-scene environment physics="debug: true;">
     <a-entity camera look-controls>
       <a-entity cursor="fuse: true;" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.02"
-        material="color: white; shader: flat">
-        <a-text id="cylinderText" position=" 0 .65 -3" value="This is a cylinder" align="center" color="black"
-          visible="false" geometry="primitive: plane; width: 1; height:0.5" material="color:white"></a-text>
+        material="color: yellow; shader: flat">
+        <!--               <a-text id="cylinderText" position=" 0 .65 -3"  value="This is a cylinder" align="center" color="black" visible="false"
+                geometry="primitive: plane; width: 1; height:0.5" material="color:white"></a-text> -->
       </a-entity>
 
     </a-entity>
 
-    <a-entity position="-1 0.5 -5" id="scene">
+    <a-entity menu position="6 0 -5" id="menu" rotation="0 -30 0">
+      <a-text id="menu1" position=" 0 0 -3" align="center" color="#FFF" visible="true"
+        geometry="primitive: plane;width: 1.75" value="Caffeine" material="color: #333"> </a-text>
+      <a-text id="menu2" position=" 0 -2 -3" align="center" color="#FFF" visible="true"
+        geometry="primitive: plane;width: 1.75" value="Ethanol" material="color: #333"></a-text>
+
+    </a-entity>
+
+
+    <a-entity position="-1 0.5 -8" id="scene" rotation="0 0 0"
+      animation="property: rotation; to: 0 360 0; loop: true; dur: 30000;resumeEvents:mouseenter">
+      <!--     <a-entity gearvr-controls position="-1 0.5 -5" id="scene" rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 50000;resumeEvents:mouseenter"> -->
+
     </a-entity>
     <!--     <a-entity id="txtLabel" text="value: Selected Molecule:{0}; color:black" position="0 0 -1"></a-entity> -->
     <!--     <a-sky color="#ECECEC"></a-sky> -->
+
+
     <a-entity star-system></a-entity>
 
     <a-sky color="#00001f"></a-sky>
